Fix most event dispatch hooks
Some patches that use these hooks will likely still need adjusting