@@ -88,7 +88,7 @@ public class ModLoader {
         this.loadingModList = FMLLoader.getLoadingModList();
         this.loadingExceptions = this.loadingModList.getErrors().stream()
                 .flatMap(ModLoadingException::fromEarlyException)
-                .toList();
+                .collect(Collectors.toList());
         this.loadingWarnings = this.loadingModList.getBrokenFiles().stream()
                 .map(file -> new ModLoadingWarning(null, ModLoadingStage.VALIDATE, InvalidModIdentifier.identifyJarProblem(file.getFilePath()).orElse("fml.modloading.brokenfile"), file.getFileName()))
                 .collect(Collectors.toList());
@@ -357,7 +357,7 @@ public class ModLoader {
         return completedStates.contains(state);
     }
 
-    public <T extends Event & IModBusEvent> void runEventGenerator(Function<ModContainer, T> generator) {
+    public <T extends IModBusEvent> void runEventGenerator(Function<ModContainer, T> generator) {
         if (!loadingStateValid) {
             LOGGER.error("Cowardly refusing to send event generator to a broken mod state");
             return;
@@ -365,7 +365,7 @@ public class ModLoader {
         ModList.get().forEachModInOrder(mc -> mc.acceptEvent(generator.apply(mc)));
     }
 
-    public <T extends Event & IModBusEvent> void postEvent(T e) {
+    public <T extends IModBusEvent> void postEvent(T e) {
         if (!loadingStateValid) {
             LOGGER.error("Cowardly refusing to send event {} to a broken mod state", e.getClass().getName());
             return;
@@ -373,7 +373,7 @@ public class ModLoader {
         ModList.get().forEachModInOrder(mc -> mc.acceptEvent(e));
     }
 
-    public <T extends Event & IModBusEvent> T postEventWithReturn(T e) {
+    public <T extends IModBusEvent> T postEventWithReturn(T e) {
         if (!loadingStateValid) {
             LOGGER.error("Cowardly refusing to send event {} to a broken mod state", e.getClass().getName());
             return e;
@@ -383,14 +383,14 @@ public class ModLoader {
     }
 
     @SuppressWarnings("removal")
-    public <T extends Event & IModBusEvent> void postEventWrapContainerInModOrder(T event) {
+    public <T extends IModBusEvent> void postEventWrapContainerInModOrder(T event) {
         postEventWithWrapInModOrder(event,
             (mc, e) -> ModLoadingContext.get().setActiveContainer(mc),
             (mc, e) -> ModLoadingContext.get().setActiveContainer(null)
         );
     }
 
-    public <T extends Event & IModBusEvent> void postEventWithWrapInModOrder(T e, BiConsumer<ModContainer, T> pre, BiConsumer<ModContainer, T> post) {
+    public <T extends IModBusEvent> void postEventWithWrapInModOrder(T e, BiConsumer<ModContainer, T> pre, BiConsumer<ModContainer, T> post) {
         if (!loadingStateValid) {
             LOGGER.error("Cowardly refusing to send event {} to a broken mod state", e.getClass().getName());
             return;
@@ -416,7 +416,7 @@ public class ModLoader {
         return runningDataGen;
     }
 
-    private static class ErroredModContainer extends ModContainer {
+    private static final class ErroredModContainer extends ModContainer {
         public ErroredModContainer() {
             super();
         }
